# libcadence

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  Makefile.in  PROJECT.name  README.md
docs/: compilation_flags  examples.md
examples/: CMakeLists.txt  Makefile.in  async_client.cpp  async_serial.cpp  async_server.cpp  serial.cpp
include/cadence/: asyncApp.hpp  asyncClient.hpp  asyncServer.hpp  channel.hpp  ioobject.hpp  ipaddress.hpp  ipendpoint.hpp  networkEndpoint.hpp  serviceNodes.hpp  unixDomainEndpoint.hpp  version.hpp
include/cadence/async/: acceptor.hpp  channel.hpp  datagramdomainsocket.hpp  event.hpp  eventloop.hpp  pipe.hpp  serial.hpp  signalSet.hpp  streamdomainsocket.hpp  streamsocket.hpp  tcpsocket.hpp  timer.hpp  udpsocket.hpp
include/cadence/io/: duplex.hpp  file.hpp  filesystem.hpp  pipe.hpp  platformFilesystem.hpp  selectable.hpp  selector.hpp  serial.hpp  sharedMemory.hpp  signalDispatcher.hpp
include/cadence/protocols/: 9p2000x.hpp
libs/: dependencies
src/: CMakeLists.txt  asyncApp.cpp  asyncClient.cpp  asyncServer.cpp  asyncServerSession.cpp  channel.cpp  ioobject.cpp  ipEndpoint.cpp  ipendpoint.cpp  serverNodes.cpp  version.cpp
src/async/: acceptor.cpp  asio_helper.hpp  asio_helper_local.hpp  asio_helper_tcp.hpp  asynErrorDomain.hpp  async.cpp  asyncSystemErrorDomain.cpp  datagramdomainsocket.cpp  event.cpp  eventLoop.cpp  pipe.cpp  serialChannel.cpp  signalSet.cpp  streamdomainacceptor.cpp  streamdomainsocket.cpp  streamsocket.cpp  streamsocket_impl.hpp  tcpacceptor.cpp  tcpsocket.cpp  timer.cpp  udpsocket.cpp
src/io/: duplex.cpp  file.cpp  pipe.cpp  platformFilesystem.cpp  selector.cpp  selector_epoll.cpp  selector_impl.hpp  selector_poll.cpp  serial.cpp  serial_list_ports.cpp  sharedMemory.cpp  signalDispatcher.cpp
src/protocols/: 9p2000x.cpp  9pMessageBuilder.cpp
test/: CMakeLists.txt  main.cpp  main.cpp.xxx  main_gtest.cpp  test_ipaddress.cpp  test_unixDomainEndpoint.cpp
test/async/: test_datagramdomainsocket.cpp  test_event.cpp  test_pipe.cpp  test_signalSet.cpp  test_streamdomainsocket.cpp  test_tcpsocket.cpp  test_timer.cpp  test_udpsocket.cpp
test/ci/: teamcity_cppunit.cpp.xxx  teamcity_gtest.cpp  teamcity_gtest.h
test/io/: test_mappedMemory.cpp  test_pipe.cpp  test_platformfilesystem.cpp  test_selector_epoll.cpp  test_selector_poll.cpp  test_sharedMemory.cpp  test_signalDispatcher.cpp
test/protocols/: test_9p2000x.cpp  test_9pMessageBuilder.cpp
